# polymarketmcp

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  RUNBOOK.md  SECURITY.md  constraints.txt  hermes_mcp_prediction_market_srs.md  pyproject.toml
.github/workflows/: ci.yml
docs/: TRACEABILITY.md
media/: README.md
media/hyperframes/hermes-pm-motion-demo/: index.html  meta.json  package.json
media/hyperframes/hermes-pm-terminal-demo/: index.html  meta.json  package.json
src/hermes_pm/: __init__.py  cli.py  config.py  errors.py  events.py  models.py
src/hermes_pm/audit/: __init__.py  store.py
src/hermes_pm/campaign/: __init__.py  evaluation.py  manager.py  promotion.py
src/hermes_pm/daemon/: __init__.py  core.py
src/hermes_pm/dashboard/: __init__.py  server.py  ui.py
src/hermes_pm/data/: __init__.py  cache.py  discovery.py  market_data.py  polymarket_client.py  sources.py
src/hermes_pm/execution/: __init__.py  economics.py  intents.py  ledger.py  live_adapter.py  live_process.py  paper_engine.py  secrets.py
src/hermes_pm/learning/: __init__.py  hermes_bridge.py  lessons.py  postmortem.py
src/hermes_pm/mcp/: __init__.py  http_server.py  prompts.py  resources.py  server.py  tools.py
src/hermes_pm/metrics/: __init__.py  registry.py
src/hermes_pm/persistence/: __init__.py  db.py  redact.py
src/hermes_pm/replay/: __init__.py  engine.py
src/hermes_pm/risk/: __init__.py  engine.py
src/hermes_pm/signals/: __init__.py  base.py  external.py  registry.py  social_x.py
src/hermes_pm/util/: __init__.py  hashing.py  ids.py  sanitize.py  security.py  timeutil.py
tests/: conftest.py
tests/chaos/: test_audit_concurrency.py  test_chaos.py  test_concurrency_stress.py  test_crash_recovery.py  test_loop_supervision.py
tests/compliance/: test_compliance.py  test_live_process.py  test_live_process_resilience.py
tests/coverage/: test_cov_daemon_mcp.py  test_cov_dashboard_cli.py  test_cov_data.py  test_cov_execution.py  test_cov_final.py  test_cov_misc.py
tests/e2e/: test_acceptance.py  test_hard_sim.py
tests/integration/: test_contracts.py  test_daemon_and_mcp.py  test_dashboard.py  test_live_polymarket.py  test_market_data.py  test_mcp_http.py  test_resources_dashboard.py  test_signals.py  test_tool_surface.py
tests/latency/: test_latency.py
tests/mutation/: test_mutation.py
tests/property/: test_property.py  test_stateful.py
tests/replay/: test_replay.py
tests/security/: test_constant_time_auth.py  test_review_fixes.py  test_secrets.py  test_security.py
tests/unit/: test_atomic_fill.py  test_audit.py  test_cosmetic.py  test_coverage_close.py  test_foundation.py  test_input_hardening.py  test_intents_evaluation.py  test_paper_engine.py  test_risk_degenerate_books.py  test_risk_engine.py
