[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-pm"
version = "0.1.2"
description = "Hermes-Integrated MCP Prediction Market Agent - local low-latency paper-trading laboratory (PM-MCP-SRS-001)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.14.2",
    "httpx>=0.27",
    "websockets>=12.0",
    "fastapi>=0.110",
    # Security floors for transitive web stack packages used by FastAPI/MCP.
    "starlette>=1.3.1",
    "python-multipart>=0.0.31",
    "uvicorn>=0.29",
    "mcp>=1.2",
    "prometheus-client>=0.20",
    # Required at startup: the daemon always builds the LiveAdapter -> SigningVault,
    # which imports execution/secrets.py, which uses Fernet + PBKDF2 (NFR-SEC-001)
    # for the encrypted-file secret store. Not optional.
    "cryptography>=48.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "ruff>=0.4",
]
# Optional OS-keychain secret backend (HPM_SECRET_STORE=keyring). Lazily imported;
# the system degrades gracefully (backend reports unavailable) when not installed.
keyring = [
    "keyring>=24",
]

[project.scripts]
hermes-pm-mcp = "hermes_pm.cli:run_mcp"
hermes-pm-mcp-http = "hermes_pm.cli:run_mcp_http"
hermes-pm-dashboard = "hermes_pm.cli:run_dashboard"
hermes-pm-demo = "hermes_pm.cli:run_demo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 120
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "latency: latency NFR benchmarks",
    "property: hypothesis property/fuzz tests",
    "e2e: end-to-end acceptance tests",
    "live: network-gated tests that hit the real Polymarket API (HPM_RUN_LIVE_TESTS=1)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
# UP042: `(str, Enum)` is intentional — it keeps `.value` JSON serialization and
# avoids StrEnum's different `str()` behavior that our f-strings/logs rely on.
ignore = ["S101", "E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
# Tests: "token_id"/"token" args trip the hardcoded-password heuristics (false
# positives), and asserting broad failure via pytest.raises(Exception) is fine.
"tests/**" = ["S105", "S106", "S107", "B017", "S311", "S608", "S110"]

[tool.coverage.run]
branch = true
source = ["hermes_pm"]

[tool.coverage.report]
show_missing = true
fail_under = 100
# Lines that are non-executable by design or only run as a real entrypoint.
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",            # Protocol / stub ellipsis bodies
]
